--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
       background-color: rgb(0, 0, 0);
       color: rgb(255, 255, 0);
       font-family: sans-serif;
+      margin: 0;
+      background-color: #000;
+      font-family: 'Arial', sans-serif;
+      color: #ff0;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -15,24 +19,73 @@
       height: 100vh;
       margin: 0;
       font-size: 2.5em;
+      padding: 20px;
+      box-sizing: border-box;
+    }
+
+    h1 {
+      font-size: 3vw;
+      margin-bottom: 40px;
       text-align: center;
     }
+
+    .quests {
+      display: flex;
+      flex-direction: column;
+      gap: 25px;
+      max-width: 80%;
+      text-align: center;
+    }
+
     .quest {
       margin: 20px 0;
+      font-size: 2vw;
+      line-height: 1.4;
+    }
+
+    @media (max-width: 768px) {
+      h1 {
+        font-size: 5vw;
+      }
+      .quest {
+        font-size: 4vw;
+      }
     }
   </style>
 </head>
 <body>
   <div id="quests"></div>
+  <h1>Квесты дня</h1>
+  <div class="quests" id="quests"></div>
 
   <script>
     const questSets = [
+    const questsList = [
+      [
+        '🧠 Сделай эйс в CS:GO — получи 2 часа',
+        '🚗 Победи в 3 катках подряд в LoL — 500 бонусов',
+        '🎯 Убей 10 врагов из AWP без смерти — 1.5 часа',
+        '🔒 Победи боссов в Dark Souls за 30 минут — 2 часа',
+        '🛠 Сыграй в 3 разных игры за сессию — 1 час'
+      ],
+      [
+        '🔥 Сделай 25 убийств подряд — 2 часа',
+        '🎮 Победи друга в Mortal Kombat 3 раза — 500 бонусов',
+        '🧨 Устрой камбэк в командной игре — 1.5 часа',
+        '📢 Приведи друга — получите по часу вдвоем',
+        '💡 Отгадай загадку админа — 1 час'
+      ],
       [
         "Выйграй 2 картки подряд в Dota 2 - 1 час в подарок",
         "Сделай 2 эйса в CS подряд — 1 час в подарок",
         "Играй 5 часов подряд — получи +1 час сверху",
         "Займи топ-1 в Warzone/PUBG — +2 часа",
         "Набери 20 убийств в Fortnite в одном матче — 500 бонусов"
+        '💀 Устрой 5 фрагов с ножа — 2 часа',
+        '🏆 Попади в топ сервера по счёту — 500 бонусов',
+        '🧱 Устрой мини-турнир среди игроков — 1.5 часа',
+        '🎧 Запиши геймплей и покажи — 1 час',
+        '🕹 Выиграй раунд без прицела — 2 часа'
       ],
       [
         "Сыграй 10 матчей за день — получи 2 часа",
@@ -40,6 +93,11 @@
         "Сделай ножевой килл — 1 час в подарок",
         "Приведи сквад,пополнитесь на 3 часа - сверху 1 час каждому",
         "Победи в 5 матчах подряд — +2 часа"
+        '📺 Сделай клип из катки — 1.5 часа',
+        '📦 Собери 3 артефакта в Dota 2 до 10 мин — 2 часа',
+        '🕵️ Найди пасхалку в нашей комнате — 500 бонусов',
+        '🎯 Попади 10 хедшотов подряд — 1 час',
+        '👥 Подпиши друга на VK — 1 час обоим'
       ],
       [
         "Приведи друга, который играет 2 часа — получи +1 час",
@@ -47,18 +105,28 @@
         "Проведи день без поражений — +2 часа",
         "Сыграй на новой карте — 1 час в подарок",
         "Играй 4+ часов без перерыва — +500 бонусов"
+        '🏹 Победи 3-х игроков из пистолета — 1.5 часа',
+        '💣 Заклади и взорви плент 3 раза — 2 часа',
+        '🚀 Сделай трюк в Rocket League — 500 бонусов',
+        '⚡ Пройди рандомный челлендж от админа — ???',
+        '🎁 Приз дня: скажи "LOOT" — 1 час'
       ]
     ];
 
     const dayIndex = new Date().getDate() % questSets.length;
     const todayQuests = questSets[dayIndex];
+    const dayIndex = new Date().getDate() % questsList.length;
+    const todayQuests = questsList[dayIndex];
 
     const container = document.getElementById("quests");
+    const container = document.getElementById('quests');
     todayQuests.forEach(q => {
       const el = document.createElement("div");
       el.className = "quest";
-      el.textContent = q;
-      container.appendChild(el);
+      const div = document.createElement('div');
+      div.className = 'quest';
+      div.textContent = q;
+      container.appendChild(div);
     });
   </script>
 </body>
